objects/TASKRAY__trBoardFilterDetails__c.object
<CustomObject>
    <description>This is a TaskRay &quot;behind the scenes&quot; object that stores the filtering configuration for Project Filters.</description>
    <fields>
        <fullName>TASKRAY__comparisonOperator__c</fullName>
        <defaultValue>&quot;=&quot;</defaultValue>
        <label>Filter Comparison Operator</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TASKRAY__detailOrderInt__c</fullName>
        <label>Filter order integer</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TASKRAY__filterField__c</fullName>
        <label>Field Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TASKRAY__filterLabel__c</fullName>
        <label>Filter Label</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TASKRAY__filterValue__c</fullName>
        <label>Filter Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TASKRAY__trBoardFilter__c</fullName>
        <label>TaskRay Board Filter</label>
        <referenceTo>TASKRAY__trBoardFilter__c</referenceTo>
        <relationshipLabel>TaskRay Board Filter Details</relationshipLabel>
        <relationshipName>trBoardFilterDetails</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>TaskRay Board Filter Detail</label>
    <listViews>
        <fullName>TASKRAY__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>TaskRay Board Filter Detail Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>TaskRay Board Filter Details</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>